# ifs_lang

./: Cargo.toml
src/: lexer.rs  lib.rs  parser.rs  wasm_runtime.rs
src/compiler/: intrinsics.wat  mod.rs  text.rs  wasm.rs
