[package]
name = "ifs_lang"
version = "0.1.0"
edition = "2024"

[features]
default = ["wasm"]
wasm = [
	"dep:wasm-encoder",
]

[dependencies]
num = "0.4"

[dependencies.anyhow]
version = "1.0"
features = ["backtrace"]

[dependencies.strum]
version = "0.27"
features = ["derive"]

[dependencies.nbnf]
git = "https://github.com/Yoplitein/nbnf.git"
rev = "9e855bdca16c850701a4cbbbec9e771ea5e27b16"

[dependencies.wasm-encoder]
version = "0.245"
default-features = false
features = ["std"]
optional = true
